[gd_scene load_steps=4 format=3 uid="uid://d4fyfarkpwkr1"]

[ext_resource type="Script" path="res://ui/menus/layouts/components/loaded_game_slot.gd" id="1_j3nab"]
[ext_resource type="Texture2D" uid="uid://c334fckw6yqed" path="res://assets/ui/icons/trash.svg" id="2_tgg44"]

[sub_resource type="AtlasTexture" id="AtlasTexture_th8kq"]
region = Rect2(112, 0, 16, 16)

[node name="LoadedGameSlot" type="Panel"]
custom_minimum_size = Vector2(450, 160)
script = ExtResource("1_j3nab")

[node name="RemoveConfirmation" type="AcceptDialog" parent="."]
title = "PROMPT_REMOVE_REQUEST"
initial_position = 1
size = Vector2i(400, 125)
ok_button_text = "PROMPT_CONFIRM_REMOVE"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
metadata/_edit_lock_ = true

[node name="SlotNumberTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AtlasTexture_th8kq")
expand_mode = 1
stretch_mode = 4

[node name="SlotNumberLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/SlotNumberTexture"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -13.5
offset_right = 6.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "1"

[node name="SavedTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "2024/05/12 00:26"

[node name="RemoveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("2_tgg44")
flat = true
icon_alignment = 2
expand_icon = true

[node name="SaveNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "FILENAME"
